--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@astrojs/react": "^3.6.2",
     "@astrojs/tailwind": "^5.1.0",
-    "@sanity/astro": "^3.1.4",
+    "@astrojs/vercel": "^7.8.0",
+    "@sanity/astro": "^3.1.6",
     "@sanity/client": "^6.21.3",
     "@sanity/visual-editing": "^2.1.9",
     "@types/react": "^18.3.4",
@@ -20,7 +21,11 @@
     "astro": "^4.14.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "sanity": "^3.55.0",
+    "sanity": "^3.56.0",
     "tailwindcss": "^3.4.10"
+  },
+  "devDependencies": {
+    "prettier": "^3.3.3",
+    "prettier-plugin-astro": "^0.14.1"
   }
 }
