--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@astrojs/react": "^3.6.2",
     "@astrojs/tailwind": "^5.1.0",
     "@astrojs/vercel": "^7.8.0",
+    "@portabletext/react": "^3.1.0",
     "@sanity/astro": "^3.1.6",
     "@sanity/client": "^6.21.3",
     "@sanity/visual-editing": "^2.1.9",
